--- a/do-an-thi-online/package.json
+++ b/do-an-thi-online/package.json
@@ -18,13 +18,14 @@
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "node-pg-migrate": "^7.9.1",
     "node-postgres": "^0.6.2",
     "pg-hstore": "^2.3.4",
     "postgres-migrations": "^5.3.0",
     "sequelize": "^6.37.5",
     "sequelize-typescript": "^2.1.6",
-    "sqlite3": "^5.1.7",
     "ulidx": "2.3.0"
   },
   "devDependencies": {
