--- a/fe-do-an-thi-online/package.json
+++ b/fe-do-an-thi-online/package.json
@@ -10,18 +10,22 @@
     "clear-cache": "rm -rf .next && yarn cache clean"
   },
   "dependencies": {
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@next/env": "^15.1.7",
     "@radix-ui/react-select": "^2.1.6",
-    "antd": "^5.24.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "framer-motion": "^12.4.7",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.476.0",
+    "moment": "^2.30.1",
     "next": "15.1.7",
+    "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.3",
@@ -34,8 +38,10 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.15",
     "@types/node": "^20",
+    "@types/qs": "^6.9.18",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
