--- a/do-an-thi-online/.env.example
+++ b/do-an-thi-online/.env.example
@@ -1,12 +1,16 @@
 DB_HOST=localhost
 DB_USER=postgres
-DB_PASSWORD=
-DATABASE=postgres
+DB_PASSWORD=defaultPassword
+DATABASE=thionline
 
 # sync db
 DB_SYNC_FORCE=0
-DB_SYNC_ALTER=0
-DB_SEED=0
+DB_SYNC_ALTER=1
+DB_SEED=1
+
+#google
+GOOGLE_CLIENT_ID=811958240167-7r3d3p7al16tnkpmvfs66kk68ndjhl9l.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 
 #jwt
 JWT_SECRET=secret
