--- a/fe-do-an-thi-online/.env.local.example
+++ b/fe-do-an-thi-online/.env.local.example
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_HOST_API=http://localhost:4000
+NEXT_PUBLIC_GOOGLE_CLIENT_ID=811958240167-7r3d3p7al16tnkpmvfs66kk68ndjhl9l.apps.googleusercontent.com
