--- a/fe-do-an-thi-online/package.json
+++ b/fe-do-an-thi-online/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/google.accounts": "^0.0.15",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.15",
     "@types/node": "^20",
